tests/types_first_function_statics/types_first_function_statics.exp
Error --------------------------------------------------------------------------------------------------------- b.js:5:1

Cannot cast `a.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   b.js:5:1
   5| a.x as string;
      ^^^

References:
   a.js:3:9
   3| foo.x = 1;
              ^ [1]
   b.js:5:8
   5| a.x as string;
             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:6:3

Cannot get `a.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:6:3
   6| a.other as number;
        ^^^^^

References:
   a.js:1:1
   1| function foo() {}
      ^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:13:1

Cannot cast `poly_a.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   b.js:13:1
   13| poly_a.x as string;
       ^^^^^^^^

References:
   poly_a.js:3:9
    3| foo.x = 1;
               ^ [1]
   b.js:13:13
   13| poly_a.x as string;
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:14:8

Cannot get `poly_a.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:14:8
   14| poly_a.other as number;
              ^^^^^

References:
   poly_a.js:1:1
    1| function foo<T>() {}
       ^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- conditional-import.js:4:3

Cannot get `f.a` because property `a` is missing in statics of function [1]. [prop-missing]

   conditional-import.js:4:3
   4| f.a as number; // ERROR
        ^

References:
   conditional.js:5:8
   5| export function f() {}
             ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- conditional-import.js:5:3

Cannot get `f.b` because property `b` is missing in statics of function [1]. [prop-missing]

   conditional-import.js:5:3
   5| f.b as number; // ERROR
        ^

References:
   conditional.js:5:8
   5| export function f() {}
             ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- conditional-import.js:8:3

Cannot get `g.a` because property `a` is missing in statics of function [1]. [prop-missing]

   conditional-import.js:8:3
    8| g.a as number; // ERROR
         ^

References:
   conditional.js:20:11
   20| const g = () => {};
                 ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- conditional.js:10:5

Cannot assign `1` to `f.a` because property `a` is missing in function [1]. [prop-missing]

   conditional.js:10:5
   10|   f.a = 1;
           ^

References:
   conditional.js:5:8
    5| export function f() {}
              ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- conditional.js:15:7

Cannot assign `1` to `f.b` because property `b` is missing in function [1]. [prop-missing]

   conditional.js:15:7
   15|     f.b = 1;
             ^

References:
   conditional.js:5:8
    5| export function f() {}
              ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- conditional.js:25:5

Cannot assign `1` to `g.a` because property `a` is missing in function [1]. [prop-missing]

   conditional.js:25:5
   25|   g.a = 1;
           ^

References:
   conditional.js:20:11
   20| const g = () => {};
                 ^^^^^^^^ [1]



Found 10 errors
